[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/sprites/static/background.png" type="Texture" id=1]
[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/screens/sign_in.gd" type="Script" id=3]

[node name="SignIn" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="RickTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 200.0
margin_bottom = -630.0
bbcode_enabled = true
bbcode_text = "[center][b]Sign in[/b][/center]"
text = "Sign in"

[node name="UsernameLineEdit" type="LineEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 600.0
margin_top = 500.0
margin_right = -600.0
margin_bottom = -460.0
align = 1
placeholder_text = "Username"

[node name="PasswordLineEdit" type="LineEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 600.0
margin_top = 650.0
margin_right = -600.0
margin_bottom = -310.0
align = 1
secret = true
secret_character = "â€¢"
placeholder_text = "Password"

[node name="LoginButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 700.0
margin_top = 850.0
margin_right = -700.0
margin_bottom = -110.0
text = "Login"

[node name="QuitButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1340.0
margin_top = 850.0
margin_right = -60.0
margin_bottom = -110.0
text = "Quit"

[node name="RegisterButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 850.0
margin_right = -1340.0
margin_bottom = -110.0
text = "Register"

[connection signal="pressed" from="LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="RegisterButton" to="." method="_on_RegisterButton_pressed"]
